[gd_scene load_steps=27 format=3 uid="uid://btcwjruvsyi8v"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_fafct"]
[ext_resource type="PackedScene" uid="uid://7vpbb7j0wes1" path="res://scenes/world/custom_world_environment.tscn" id="1_jbpyi"]
[ext_resource type="PackedScene" uid="uid://mm4fib8gds8v" path="res://scenes/terrain/rocks.tscn" id="1_jrx1x"]
[ext_resource type="PackedScene" uid="uid://7ecyw24x8ek3" path="res://scenes/objects/chest.tscn" id="1_s6nbt"]
[ext_resource type="PackedScene" uid="uid://m34ge5n2y6kq" path="res://scenes/character/stone_buddy.tscn" id="2_8xbvx"]
[ext_resource type="PackedScene" uid="uid://bfc6muihiuy8u" path="res://scenes/objects/shell.tscn" id="3_0bgje"]
[ext_resource type="Material" uid="uid://fmi4raq7qnhe" path="res://material/sandy_gravel.tres" id="3_irsuh"]
[ext_resource type="MeshLibrary" uid="uid://b1olq4w32n4b3" path="res://meshlibs/mesh_stair.tres" id="4_rdd1a"]
[ext_resource type="PackedScene" uid="uid://bxptxteivbgjd" path="res://scenes/manager/item_spawn_manager.tscn" id="5_cbge5"]
[ext_resource type="MeshLibrary" uid="uid://cndqidfg38and" path="res://meshlibs/mesh_dummy.tres" id="6_5d6pi"]
[ext_resource type="PackedScene" uid="uid://uqfry7sfeu2n" path="res://scenes/objects/grass/grass_normal.tscn" id="6_kcmh8"]
[ext_resource type="PackedScene" uid="uid://bqfcy7uab3xat" path="res://scenes/tilemaps/tilemap_block.tscn" id="7_iog30"]
[ext_resource type="PackedScene" uid="uid://qrv36u87xk77" path="res://assets/objects/grass/grass_short.glb" id="7_lh7vv"]
[ext_resource type="PackedScene" uid="uid://dcsk5mh4f1wh6" path="res://scenes/world/grid_map.tscn" id="7_u3a5i"]
[ext_resource type="PackedScene" uid="uid://tk2eflh7qtvg" path="res://scenes/objects/grass/grass_short_plane.tscn" id="8_lqtem"]
[ext_resource type="PackedScene" uid="uid://b0r5vk50kpx5o" path="res://scenes/objects/wood_stick.tscn" id="9_0vct4"]
[ext_resource type="PackedScene" uid="uid://dv3h2niliheuc" path="res://scenes/objects/grass/grass_collectable.tscn" id="9_5tdkx"]
[ext_resource type="Script" path="res://inventory/inventory_data.gd" id="11_c5465"]
[ext_resource type="PackedScene" uid="uid://b7vf6qkul3k7h" path="res://inventory/inventory.tscn" id="15_2wl7j"]
[ext_resource type="Resource" uid="uid://dpv42mt3mtcg3" path="res://test_inventory.tres" id="15_a6wpl"]
[ext_resource type="Script" path="res://inventory/inventory_interface.gd" id="17_a264a"]
[ext_resource type="PackedScene" uid="uid://dvrbdkn1plvwu" path="res://inventory/slot.tscn" id="19_m4ofp"]

[sub_resource type="PlaneMesh" id="PlaneMesh_0w1lp"]
size = Vector2(15, 15)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_gnm76"]
data = PackedVector3Array(10, 0, 10, -10, 0, 10, 10, 0, -10, -10, 0, 10, -10, 0, -10, 10, 0, -10)

[sub_resource type="Resource" id="Resource_vxbg6"]
script = ExtResource("11_c5465")
slot_datas = Array[Resource("res://inventory/slot_data.gd")]([null, null, null, null, null])

[sub_resource type="Resource" id="Resource_2cqps"]
script = ExtResource("11_c5465")
slot_datas = Array[Resource("res://inventory/slot_data.gd")]([null, null, null, null, null])

[node name="Main" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.47052, 3.23541, -5.16532)
script = ExtResource("1_fafct")

[node name="World" type="Node3D" parent="."]

[node name="CustomWorldEnvironment" parent="World" instance=ExtResource("1_jbpyi")]

[node name="Lights" type="Node3D" parent="World"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="World/Lights"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 5.74541, 0)
visible = false
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.75449, 3.2077, -2.70588)
light_color = Color(0.545098, 0.32549, 0.631373, 1)
light_energy = 5.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="OmniLight3D2" type="OmniLight3D" parent="World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.75996, 3.25648, -7.86405)
light_color = Color(0.588235, 0.741176, 0.792157, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="OmniLight3D3" type="OmniLight3D" parent="World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.72733, 3.13286, 4.81682)
light_color = Color(0.588235, 0.741176, 0.792157, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="OmniLight3D4" type="OmniLight3D" parent="World/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.4568, 5.54554, -16.4015)
light_color = Color(0.588235, 0.741176, 0.792157, 1)
light_energy = 3.0
shadow_enabled = true
shadow_opacity = 0.5
shadow_blur = 5.0
omni_range = 10.0

[node name="Ground" type="MeshInstance3D" parent="World"]
transform = Transform3D(1.75, 0, 0, 0, 1.75, 0, 0, 0, 1.75, 0, 0, 0)
mesh = SubResource("PlaneMesh_0w1lp")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("3_irsuh")

[node name="Ground" type="StaticBody3D" parent="World/Ground" groups=["spawn_collider"]]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Ground/Ground"]
shape = SubResource("ConcavePolygonShape3D_gnm76")

[node name="StairsGridMap" type="GridMap" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, 0)
mesh_library = ExtResource("4_rdd1a")
data = {
"cells": PackedInt32Array(4, 0, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="GridMap" parent="World" instance=ExtResource("7_u3a5i")]
mesh_library = ExtResource("6_5d6pi")
data = {
"cells": PackedInt32Array(4, 65535, 0, 4, 65534, 0, 4, 65533, 0, 5, 65532, 0, 5, 65533, 0, 5, 65534, 0, 5, 65535, 0, 3, 65534, 0, 3, 65533, 0, 5, 65531, 0, 5, 65530, 0, 5, 65529, 0, 4, 65529, 0, 3, 65529, 0, 0, 65529, 0, 65535, 65529, 0, 65534, 65529, 0, 65533, 65529, 0, 65533, 65528, 0, 65534, 65528, 0, 65535, 65528, 0, 0, 65528, 0, 3, 65528, 0, 4, 65528, 0, 5, 65528, 0, 2, 65528, 0, 1, 65528, 0, 1, 65529, 0, 2, 65529, 0, 65532, 65528, 0, 65532, 65529, 0, 65537, 65528, 0, 65536, 65528, 0, 131071, 65528, 0, 131070, 65528, 0, 131070, 65529, 0, 131069, 65529, 0, 131069, 65528, 0, 131068, 65528, 0, 131068, 65529, 0, 65531, 65529, 0, 65531, 65528, 0, 65539, 65533, 0, 6, 65535, 0, 6, 65534, 0, 6, 65533, 0, 6, 65532, 0, 6, 65531, 0, 6, 65530, 0, 6, 65529, 0, 6, 65528, 0)
}
item_scene = ExtResource("7_iog30")

[node name="WoodStickSpawnManager" parent="." instance=ExtResource("5_cbge5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.72629, 0.888896, -5.69934)
item_scene = ExtResource("9_0vct4")
max_items = 15

[node name="ShellSpawnManager" parent="." instance=ExtResource("5_cbge5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.38768, 0, -1.88661)
item_scene = ExtResource("3_0bgje")

[node name="Objects" type="Node3D" parent="."]

[node name="Rocks" parent="Objects" instance=ExtResource("1_jrx1x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11.5697)

[node name="Chest" parent="Objects" instance=ExtResource("1_s6nbt")]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, -4.63194)
collision_mask = 2
inventory_data = SubResource("Resource_vxbg6")

[node name="Chest2" parent="Objects" instance=ExtResource("1_s6nbt")]
transform = Transform3D(-1.74846e-08, 0, -0.4, 0, 0.4, 0, 0.4, 0, -1.74846e-08, 6.08176, 0, 0.2313)
collision_mask = 2
inventory_data = SubResource("Resource_2cqps")

[node name="GrassNormal" parent="Objects" instance=ExtResource("6_kcmh8")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -3.31159, 0, 4)

[node name="GrassShort" parent="Objects" instance=ExtResource("7_lh7vv")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -2.85791, 0, 4.42808)

[node name="GrassShortPlane" parent="Objects" instance=ExtResource("8_lqtem")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -2.13643, 0, 3.43925)

[node name="GrassCollectable" parent="Objects" instance=ExtResource("9_5tdkx")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -1.51341, 0, 4.04199)

[node name="GrassCollectable2" parent="Objects" instance=ExtResource("9_5tdkx")]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.35, -2.81351, 0, 3.64591)

[node name="EntitiesLayer" type="Node3D" parent="." groups=["entities_layer"]]

[node name="StoneBuddy" parent="EntitiesLayer" instance=ExtResource("2_8xbvx")]
inventory_data = ExtResource("15_a6wpl")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("17_a264a")
metadata/_edit_use_anchors_ = true

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("15_2wl7j")]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 70.0
offset_bottom = 70.0

[node name="ExternalInventory" parent="UI/InventoryInterface" instance=ExtResource("15_2wl7j")]
visible = false
layout_mode = 0
offset_left = 1000.0
offset_top = 30.0
offset_right = 1040.0
offset_bottom = 70.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("19_m4ofp")]
visible = false
modulate = Color(1, 1, 1, 0.54902)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
